--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -38,6 +38,8 @@
                     <thead>
                         <tr>
                             <th scope="col">User</th>
+                            <th scope="col"># Boxes Requested</th>
+                            <th scope="col">Duration</th>
                             <th scope="col">Accept/Deny</th>
                         </tr>
                     </thead>
@@ -45,10 +47,13 @@
                         <% @requests.each do |r|%>
                             <tr>
                                 <td><%= link_to r.user.name, r.user%></td>
+                                <td><%= r.boxes%></td>
+                                <td><%= r.duration%></td>
                                 <td>
                                      <%= link_to bootstrap_icon("patch-check-fill",fill:"green",width:25,height:25),"/accept/#{r.id}", method: :delete%>
                                     <%= link_to bootstrap_icon("x-circle-fill",fill:"red",width:25,height:25), "/deny/#{r.id}", method: :delete%>
                                 </td>
+
                             </tr>
                         <%end%>
                                 
